--- a/themes/aglaus2/layouts/_default/li.html
+++ b/themes/aglaus2/layouts/_default/li.html
@@ -7,11 +7,10 @@
         {{ end }}
     </div>
     <div class="data">
-        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a>
+        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
         {{ if isset .Params "tech" }}
-        ( <i>{{ .Params.tech }}</i> )
+        <h3><i>{{ .Params.tech }}</i></h3>
         {{ end }}
-        </h1>
         <div class="summary">{{ .Summary }}</div>
     </div>
     <footer class="readon">
