--- a/themes/aglaus2/layouts/partials/default_foot.html
+++ b/themes/aglaus2/layouts/partials/default_foot.html
@@ -7,7 +7,7 @@
 -->
 
 <footer class="copy">
-    <p>&copy; {{ .Site.LastChange.Year }} {{ if isset .Site.Params "Author" }} {{ .Site.Params.Author }} {{ else }} {{ .Site.Title }} {{ end }}</p>
+    <p>&copy; {{ .Now.Year }} {{ if isset .Site.Params "Author" }} {{ .Site.Params.Author }} {{ else }} {{ .Site.Title }} {{ end }}</p>
     <p>Powered by <a href="http://gohugo.io" target="_blank">Hugo</a>, Theme adapted from <a href="https://github.com/dim0627/hugo_theme_aglaus" target="_blank">aglaus</a> and <a href="https://github.com/TiTi/hurock">hurock</a>.</p>
 </footer>
 
